--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,6 +1,6 @@
-{%import 'macros.html' as macro%}
+
 <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-    <a class="navbar-brand one-minute" href="/">BLOG</a>
+    <a class="navbar-brand one-minute" href="/">POST</a>
     <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
         aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -17,14 +17,14 @@
                     categories
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    {{macro.displayCategory(categories)}}
+                    
                 </div>
             </li>
         </ul>
         <ul class="navbar-nav navbar-right" style="list-style-type:none">
             {% if current_user.is_authenticated %}
             <li class="nav-item">
-                <a class="nav-link username" href="/"><span style="color:white;">{{current_user.username.capitalize()}}</span></a>
+                <a class="nav-link username" href="/"><span>{{current_user.username.capitalize()}}</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link sign" href="{{url_for('auth.logout')}}">Sign Out</a>
