--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,6 +1,6 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-    <a class="navbar-brand one-minute" href="/">POST</a>
+    <a class="navbar-brand post" href="/">BLOG</a>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav mr-auto home" style="list-style-type:none">
             <li class="nav-item active">
@@ -20,7 +20,7 @@
             </li>
             {%else%}
             <li class="nav-item">
-                <a class="nav-link sign" href="{{url_for('auth.login')}}">Sign In</a>
+                <a class="nav-link sign " href="{{url_for('auth.login')}}">Sign In</a>
             </li>
             {%endif%}
         </ul>
