--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,7 +1,8 @@
 {% import 'bootstrap/wtf.html' as wtf%}
+{%extends 'base.html'%}
 {% block content%}
 
-<div class="container">
+<div class="container login">
     <div class="row">
 
         <div class="col-md-2"> </div>
