--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -1,11 +1,13 @@
 {% import 'bootstrap/wtf.html' as wtf%} 
-
+{% extends 'base.html'%}
 {% block content %}
-<div class="col-md-4"> </div>
-<div class="col-md-8">
+<div class="container">
+  
+  <div class="col-md-8 reg">
 
     {{wtf.quick_form(registration_form)}}
 
+</div>
 </div>
 
 {% endblock%}
