Change font color of the quote aurhor

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -33,7 +33,7 @@ body{
   font-weight: 900;
   margin-left: 10%;
 }
-/*
+
 .home {
   font-size: 40px;
   color:white;
@@ -55,7 +55,7 @@ body{
   font-weight: 700;
   
   
-}
+}/*
 .quote{
   font-size: 35px;
   color: rgb(36, 35, 35);
