Style the quote

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -55,7 +55,7 @@ body{
   font-weight: 700;
   
   
-}/*
+}
 .quote{
   font-size: 35px;
   color: rgb(36, 35, 35);
@@ -63,7 +63,7 @@ body{
   margin-top: 8%;
 
 }
-
+/*
 .post-title {
   font-size: 30px;
 }
