Make the add new post button red

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -78,11 +78,11 @@ body{
 .post-content {
 
 }
-/*
+
 .newpost {
   width:30%;
   background-color: brown;
-  color: white;
+  color: white;/*
   font-size: 30px;
   padding: 5px;
   margin:5%;
