Add a hover effect to the blog titles

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -82,7 +82,7 @@ body{
 .newpost {
   width:30%;
   background-color: brown;
-  color: white;/*
+  color: white;
   font-size: 30px;
   padding: 5px;
   margin:5%;
