enable deleting of the comments

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -64,9 +64,15 @@ body{
 
 }
 
-.post-title {
-  font-size: 30px;
+.posttitle{
+  font-size: 50px;
 }
+
+.post-content{
+  font-size:30px ;
+}
+
+
 .title-blogs{
   color: rgb(24, 11, 2);
   margin-top: 3%;
@@ -96,7 +102,7 @@ body{
 }
 
 .article {
-  font-size: 40px;
+  font-size: 30px;
 }
 
 .post-link {
@@ -109,7 +115,12 @@ body{
 }
 
 .content {
-  font-size: 30px;
+  font-size: 20px;
   color: rgb(24, 11, 2);
   font-weight: 700;
+}
+
+.comment {
+  font-size: 30px;
+  margin-top:1%;
 }
